# binance-polybar

./: Cargo.toml
data/: config.example
src/: colors.rs  config.rs  main.rs
