[package]
name = "binance-i3status"
version = "0.1.0"
authors = ["Cainã Costa <me@cfcosta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = "0.11.2"
colored = "2.0.0"
indexmap = "1.6.1"
serde = "1.0.123"
serde_derive = "1.0.123"
shellexpand = "2.1.0"
structopt = "0.3.21"
thiserror = "1.0.24"
toml = "0.5.8"
